Changed menu-screen height to auto to try address scroll issue on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -54,7 +54,7 @@ body {
   font-family: "Orbitron", sans-serif;
   z-index: 1;
   width: 100vw;
-  height: 100vh;
+  height: auto;
 }
 
 #canvas {
